<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:id="@+id/linearLayout"
    android:gravity="center_horizontal"
    android:paddingTop="10dp"
    android:background="@color/colorPrimaryDark"
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:text="@string/stop_audio_in"
        android:textStyle="bold"
        android:fontFamily="@font/dmsans_font"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginBottom="10dp"
        android:textSize="17sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


        <TextView
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/history_background"
            android:id="@+id/s5mins"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/dmsans_font"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_white"
            android:text="@string/_5_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/history_background"
            android:id="@+id/s10mins"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/dmsans_font"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_white"
            android:text="@string/_10_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/history_background"
            android:id="@+id/s15mins"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/dmsans_font"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_white"
            android:text="@string/_15_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/history_background"
            android:id="@+id/s30mins"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/dmsans_font"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_white"
            android:text="@string/_30_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/history_background"
            android:id="@+id/s45mins"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/dmsans_font"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_white"
            android:text="@string/_45_minutes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/history_background"
            android:id="@+id/s60mins"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/dmsans_font"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_white"
            android:text="@string/_1_hour"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:paddingEnd="15dp"
            android:paddingStart="15dp"
            android:clickable="true"
            android:focusable="true"
            android:background="@drawable/history_background"
            android:id="@+id/eot"
            android:paddingTop="15dp"
            android:paddingBottom="15dp"
            android:fontFamily="@font/dmsans_font"
            android:textStyle="bold"
            android:textSize="16sp"
            android:textColor="@color/light_white"
            android:text="@string/end_of_track"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    <TextView
        android:visibility="gone"
        android:paddingEnd="15dp"
        android:paddingStart="15dp"
        android:clickable="true"
        android:focusable="true"
        android:background="@drawable/history_background"
        android:id="@+id/snone"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:fontFamily="@font/dmsans_font"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textColor="@color/light_white"
        android:text="None"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>