<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="@color/colorPrimaryDark"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:padding="15dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:backgroundTint="@color/colorPrimaryDark">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:fontFamily="@font/dmsans_font"
            android:textSize="21sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:text="@string/playlist_support"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/headerTxt"
            android:textSize="17sp"
            android:layout_marginTop="25dp"
            android:textStyle="bold"
            android:fontFamily="@font/dmsans_font"
            android:textColor="@color/white"
            android:text="@string/how_to_parse_playlist_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:id="@+id/textTxt"
            android:textSize="16sp"
            android:layout_marginBottom="10dp"
            android:textColor="@color/light_white"
            android:layout_marginTop="5dp"
            android:text="@string/in_order_to_add_songs_from_playlist_url_go_to_library_playlist_create_modify_add_playlist"
            android:fontFamily="@font/dmsans_font"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</RelativeLayout>