<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    tools:context=".ErrorActivity"
    android:background="@color/colorPrimaryDark">

    <android.support.design.widget.TextInputLayout
        android:layout_marginTop="5dp"
        android:layout_above="@id/crashLayout"
        android:layout_width="match_parent"
        android:layout_marginBottom="10dp"
        android:layout_height="match_parent">
        <EditText
            android:gravity="top"
            android:id="@+id/reportText"
            android:hint="@string/leave_your_report_message"
            android:background="@android:color/transparent"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </android.support.design.widget.TextInputLayout>

    <RelativeLayout
        android:id="@+id/crashLayout"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="10dp"
        android:background="@drawable/error_back"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp">

        <CheckBox
            android:id="@+id/sendLogs"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentStart="true"
            android:checked="true" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="20dp"
            android:layout_toEndOf="@id/sendLogs"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_font"
                android:text="@string/crash_logs"
                android:textColor="@color/white"
                android:textSize="15sp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/dmsans_font"
                android:text="@string/view"
                android:textColor="@color/colorAccent"
                android:textSize="13sp" />
        </LinearLayout>

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:src="@drawable/ic_log" />
    </RelativeLayout>

</RelativeLayout>